--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,8 @@
     font-weight: bolder;
     font-size: 70px;
     font-family: Arial, Helvetica, sans-serif;
+   te
+   
 }
 .description{
     color: white;
